--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="paper image">
   <p>How can be </p>
-   <p> someone so cute 💚 </p>
+   <p> someone so goated 🐐 </p>
 
   <img src="images/toad1.jpeg" />
 </div>
