--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 </div>
 
 <div class="paper">
-<p class="p1">You are the only </p>
-  <p class="p1">Imature Toad i know<span style="color: red !important;">💚</span></p>
+<p class="p1">You are the most </p>
+  <p class="p1">arrogant Toad i know<span style="color: red !important;">💚</span></p>
 </div>
 
 <div class="paper">
